# chat

./: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/: health.py
app/api/v1/: analytics.py  auth.py  chat.py  conversations.py  documents.py  messages.py  profiles.py  prompts.py
app/core/: __init__.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  analytics.py  conversation.py  document.py  message.py  profile.py  prompt.py  user.py
app/schemas/: __init__.py  analytics.py  chat.py  conversation.py  document.py  message.py  profile.py  prompt.py  user.py
app/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  document_service.py  llm_service.py  vector_service.py
app/utils/: __init__.py  document_processor.py  helpers.py
cli/: __init__.py  chat_cli.py  manage.py
scripts/: run_dev.sh  setup.sh
src/chat/: __init__.py  main.py
src/chat/api/: __init__.py  dependencies.py
src/chat/api/routes/: __init__.py  auth.py  chat.py  documents.py  health.py
src/chat/cli/: __init__.py  chat.py  manage.py
src/chat/config/: __init__.py  settings.py
src/chat/core/: __init__.py  database.py  logging.py  security.py
src/chat/models/: __init__.py  chat.py  documents.py  user.py
src/chat/services/: __init__.py  auth_service.py  document_service.py  llm_service.py  vector_store_service.py  vector_store_service_full.py
tests/: conftest.py
tests/test_api/: __init__.py  test_basic.py
