[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-api"
version = "1.0.0"
description = "Advanced AI Chatbot Backend API Platform"
authors = [{name = "Chat API Team", email = "team@chat-api.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "langchain", "ai", "chatbot", "vector-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "langchain>=0.3.10",
    "langchain-openai>=0.2.10",
    "langchain-community>=0.3.9",
    "langgraph>=0.2.52",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.19",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.1",
    "python-docx>=1.1.2",
    "PyPDF2>=3.0.1",
    "python-magic>=0.4.27",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "click>=8.1.7",
    "rich>=13.9.4",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[project.scripts]
chat-cli = "cli.chat_cli:main"
chat-manage = "cli.manage:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"